added google verification

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="Shamail Abbas's Portfolio"
       content="Shamail Abbas, Full Stack developer"
     />
+    <meta name="google-site-verification" content="DOWEnLy47dz46FibtI5eRpiVhoiTGLs-VU_Sf4rfpTQ" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/aaa.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
